--- a/examples/example_glfw_opengl3/imgui.ini
+++ b/examples/example_glfw_opengl3/imgui.ini
@@ -19,6 +19,34 @@ Pos=737,49
 Size=1241,1079
 
 [Window][OpenGL Texture Test]
-Pos=725,-2
-Size=1100,887
+Pos=170,373
+Size=1054,986
+
+[Window][dummy window]
+Pos=173,103
+Size=271,122
+
+[Window][file browser##filebrowser_859888153328]
+Pos=749,323
+Size=700,450
+
+[Window][file browser##filebrowser_539204580560]
+Pos=60,60
+Size=700,450
+
+[Window][OpenGL Image Blender]
+Pos=57,61
+Size=1083,1152
+
+[Window][file browser##filebrowser_722545406272]
+Pos=802,495
+Size=700,450
+
+[Window][file browser##filebrowser_498901316288]
+Pos=802,495
+Size=700,450
+
+[Window][file browser##filebrowser_692111536128]
+Pos=261,446
+Size=700,450
 
