--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@
 .vs/
 .Debug/
 .Release/
-./examples/example_glfw_opengl3/Debug/
-./examples/example_glfw_opengl3/Debug/**
+**/Debug/
+**/Release/
