--- a/OpenGl.vcxproj
+++ b/OpenGl.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="libs\imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\blending.cpp" />
+    <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\window_init.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +158,8 @@
     <ClInclude Include="backends\imgui_impl_vulkan.h" />
     <ClInclude Include="backends\imgui_impl_wgpu.h" />
     <ClInclude Include="backends\imgui_impl_win32.h" />
+    <ClInclude Include="include\glad\glad.h" />
+    <ClInclude Include="include\KHR\khrplatform.h" />
     <ClInclude Include="libs\emscripten\emscripten_mainloop_stub.h" />
     <ClInclude Include="libs\glfw\include\glfw\glfw3.h" />
     <ClInclude Include="libs\glfw\include\glfw\glfw3native.h" />
