--- a/Jelly.vcxproj
+++ b/Jelly.vcxproj
@@ -133,9 +133,10 @@
     <ClCompile Include="libs\imgui\imgui_tables.cpp" />
     <ClCompile Include="libs\imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="main_window.cpp" />
     <ClCompile Include="src\blending.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\io\shaders.cpp" />
+    <ClCompile Include="src\main_window.cpp" />
     <ClCompile Include="src\Widgets\image_compositor.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -160,7 +161,10 @@
     <ClInclude Include="backends\imgui_impl_wgpu.h" />
     <ClInclude Include="backends\imgui_impl_win32.h" />
     <ClInclude Include="include\glad\glad.h" />
+    <ClInclude Include="include\io\file_io.h" />
+    <ClInclude Include="include\io\shaders.h" />
     <ClInclude Include="include\KHR\khrplatform.h" />
+    <ClInclude Include="include\main_window.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\widgets\base_widget.h" />
     <ClInclude Include="include\widgets\image_compositor.h" />
@@ -174,14 +178,16 @@
     <ClInclude Include="libs\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="libs\imgui\include\imstb_textedit.h" />
     <ClInclude Include="libs\imgui\include\imstb_truetype.h" />
-    <ClInclude Include="main_window.h" />
     <ClInclude Include="src\defs.h" />
     <ClInclude Include="src\imfilebrowser.h" />
+    <ClCompile Include="src\io\file_io.cpp" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\stb_image_write.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libs\emscripten\shell_minimal.html" />
+    <None Include="shaders\frag.glsl" />
+    <None Include="shaders\vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
