--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,9 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=58,85
-Size=726,1248
+Pos=12,225
+Size=729,1248
+Collapsed=1
 
 [Window][Hello, world!]
 Pos=245,230
@@ -35,7 +36,7 @@ Pos=60,60
 Size=700,450
 
 [Window][OpenGL Image Blender]
-Pos=8,4
+Pos=1154,72
 Size=1083,1142
 
 [Window][file browser##filebrowser_722545406272]
@@ -49,4 +50,16 @@ Size=700,450
 [Window][file browser##filebrowser_692111536128]
 Pos=261,446
 Size=700,450
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=638,304
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Settings Menu]
+Pos=17,63
+Size=406,167
 
