--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,9 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1572,2
+Pos=1094,62
 Size=729,1248
+Collapsed=1
 
 [Window][Hello, world!]
 Pos=245,230
