--- a/Jelly.vcxproj.filters
+++ b/Jelly.vcxproj.filters
@@ -242,6 +242,12 @@
     <ClInclude Include="src\graphics\examples\texured_rectangle.h">
       <Filter>Source Files\graphics\examples</Filter>
     </ClInclude>
+    <ClInclude Include="src\graphics\examples\awesome_rectangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\graphics\awesome_gl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="libs\emscripten\shell_minimal.html" />
@@ -251,6 +257,10 @@
     <None Include="shaders\frag.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\awesome_rectangle\frag_aws_rect.glsl" />
+    <None Include="shaders\awesome_rectangle\vertex_aws_rect.glsl" />
+    <None Include="shaders\textured_rectangle\vertex_tex_rect.glsl" />
+    <None Include="shaders\textured_rectangle\frag_tex_rect.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="fonts\JetBrainsMono-Regular.ttf">
