--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1094,62
+Pos=1577,-1
 Size=729,1248
 Collapsed=1
 
@@ -60,6 +60,6 @@ IsChild=1
 Size=200,100
 
 [Window][Settings Menu]
-Pos=17,63
-Size=456,274
+Pos=0,0
+Size=465,249
 
