--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1577,-1
+Pos=1573,0
 Size=729,1248
 Collapsed=1
 
@@ -61,5 +61,5 @@ Size=200,100
 
 [Window][Settings Menu]
 Pos=0,0
-Size=701,313
+Size=699,504
 
