--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1573,0
+Pos=1574,-3
 Size=729,1248
 Collapsed=1
 
@@ -61,5 +61,5 @@ Size=200,100
 
 [Window][Settings Menu]
 Pos=0,0
-Size=699,504
+Size=672,715
 
