--- a/Jelly.vcxproj
+++ b/Jelly.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="src\graphics\examples\awesome_cube.h" />
     <ClInclude Include="src\graphics\examples\awesome_cube_field.h" />
     <ClInclude Include="src\graphics\examples\awesome_rectangle.h" />
+    <ClInclude Include="src\graphics\examples\let_there_be_light.h" />
     <ClInclude Include="src\graphics\examples\texured_rectangle.h" />
     <ClInclude Include="src\imfilebrowser.h" />
     <ClCompile Include="src\io\file_io.cpp" />
@@ -208,12 +209,18 @@
     <None Include="shaders\awesome_rectangle\frag_aws_rect.glsl" />
     <None Include="shaders\awesome_rectangle\vertex_aws_rect.glsl" />
     <None Include="shaders\frag.glsl" />
+    <None Include="shaders\let_there_be_light\frag_objects.glsl" />
+    <None Include="shaders\let_there_be_light\frag_light.glsl" />
+    <None Include="shaders\let_there_be_light\vertex_objects.glsl" />
     <None Include="shaders\textured_rectangle\frag_tex_rect.glsl" />
     <None Include="shaders\textured_rectangle\vertex_tex_rect.glsl" />
     <None Include="shaders\vertex.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="fonts\JetBrainsMono-Regular.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="shaders\let_there_be_light\vertex_light.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
