--- a/Jelly.vcxproj
+++ b/Jelly.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="src\graphics\examples\awesome_rectangle.h" />
     <ClInclude Include="src\graphics\examples\let_there_be_light.h" />
     <ClInclude Include="src\graphics\examples\texured_rectangle.h" />
+    <ClInclude Include="src\graphics\examples\xz_grid.h" />
     <ClInclude Include="src\imfilebrowser.h" />
     <ClCompile Include="src\io\file_io.cpp" />
     <ClInclude Include="src\stb_image.h" />
@@ -215,6 +216,8 @@
     <None Include="shaders\textured_rectangle\frag_tex_rect.glsl" />
     <None Include="shaders\textured_rectangle\vertex_tex_rect.glsl" />
     <None Include="shaders\vertex.glsl" />
+    <None Include="shaders\xz_grid\frag_xz_grid.glsl" />
+    <None Include="shaders\xz_grid\vertex_xz_grid.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="fonts\JetBrainsMono-Regular.ttf" />
